# Минимальная версия CMake
cmake_minimum_required(VERSION 2.4)

# Название проекта
project(GameSpy)

# Установка стандарта C++
set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD_REQUIRED True)

FILE(GLOB GAME_SPY_SOURCE "*.c")
FILE(GLOB GAME_SPY_HEADERS "*.h")

FILE(GLOB GAME_SPY_CENGINE_SOURCE "*.c")
FILE(GLOB GAME_SPY_CENGINE_HEADERS "*.h")

FILE(GLOB GAME_SPY_CHAT_SOURCE "*.c")
FILE(GLOB GAME_SPY_CHAT_HEADERS "*.h")

FILE(GLOB GAME_SPY_PEER_SOURCE "*.c")
FILE(GLOB GAME_SPY_PEER_HEADERS "*.h")

FILE(GLOB GAME_SPY_PINGER_SOURCE "*.c")
FILE(GLOB GAME_SPY_PINGER_HEADERS "*.h")

FILE(GLOB GAME_SPY_QUERYREPORTING_SOURCE "*.c")
FILE(GLOB GAME_SPY_QUERYREPORTING_HEADERS "*.h")

add_definitions( -D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
add_definitions( -D_CRT_SECURE_NO_WARNINGS)

add_definitions( -D_WIN32_WINNT=0x0501)

add_library(GameSpy STATIC ${GAME_SPY_SOURCE} ${GAME_SPY_HEADERS} ${GAME_SPY_CENGINE_SOURCE} 
${GAME_SPY_CENGINE_HEADERS} ${GAME_SPY_CHAT_SOURCE} ${GAME_SPY_CHAT_HEADERS} 
${GAME_SPY_PEER_SOURCE} ${GAME_SPY_PEER_HEADERS}  ${GAME_SPY_PINGER_SOURCE} ${GAME_SPY_PINGER_HEADERS} ${GAME_SPY_QUERYREPORTING_SOURCE} ${GAME_SPY_QUERYREPORTING_HEADERS})

